# facety

./: .gitignore  CMakeLists.txt  main.cpp
Documentation/: Facety_Presentation.key  Milestone1.pages  Update_mechanism.pages  data_flow_diagram_getClusters.pages  data_flow_diagram_overall.pages  functions .pages
installation/OpenCV-master/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
installation/OpenCV-master/lib/: libopencv_aruco.4.3.0.dylib  libopencv_bgsegm.4.3.0.dylib  libopencv_bioinspired.4.3.dylib  libopencv_calib3d.4.3.dylib  libopencv_ccalib.4.3.0.dylib  libopencv_cvv.4.3.0.dylib  libopencv_datasets.dylib  libopencv_dnn_objdetect.4.3.dylib  libopencv_dnn_superres.dylib  libopencv_dpm.dylib  libopencv_face.4.3.0.dylib  libopencv_features2d.4.3.0.dylib  libopencv_flann.4.3.dylib  libopencv_freetype.dylib  libopencv_fuzzy.4.3.dylib  libopencv_gapi.4.3.0.dylib  libopencv_hdf.dylib  libopencv_hfs.dylib  libopencv_highgui.4.3.0.dylib  libopencv_img_hash.4.3.0.dylib  libopencv_imgcodecs.4.3.dylib  libopencv_intensity_transform.dylib  libopencv_line_descriptor.4.3.dylib  libopencv_ml.4.3.0.dylib  libopencv_objdetect.4.3.dylib  libopencv_optflow.4.3.0.dylib  libopencv_phase_unwrapping.4.3.0.dylib  libopencv_photo.dylib  libopencv_plot.4.3.dylib  libopencv_quality.dylib  libopencv_rapid.4.3.0.dylib  libopencv_reg.dylib  libopencv_rgbd.4.3.dylib  libopencv_saliency.4.3.0.dylib  libopencv_shape.4.3.0.dylib  libopencv_stereo.4.3.0.dylib  libopencv_stitching.4.3.dylib  libopencv_structured_light.4.3.dylib  libopencv_superres.dylib  libopencv_surface_matching.4.3.0.dylib  (+9 more)
installation/OpenCV-master/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/FaceRec/header/: Clustering.h  faceClustering.h
src/FaceRec/source/: Clustering.cpp  Updation.cpp  faceClustering.cpp
src/FileExplorer/header/: ImageIterator.h  ImageOrganizer.h  directoryIterator.h  makeClusterDirectories.h
src/FileExplorer/source/: ImageIterator.cpp  ImageOrganizer.cpp  directoryIterator.cpp  makeClusterDirectories.cpp
src/QT/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Utilities/header/: Constants.h  ImageUtilities.h
src/Utilities/source/: ImageUtilities.cpp
src/faceRec/source/: faceClustering.cpp  faceClustering_modified.cpp
tests/: CMakeLists.txt  has_filesystem.cc  testing.cpp
